k8s/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: devboard-frontend
  namespace: devboard

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devboard-frontend

  template:
    metadata:
      labels:
        app: devboard-frontend

    spec:
      containers:
        - name: devboard-frontend
          image: 651023585812.dkr.ecr.ap-south-1.amazonaws.com/devboard-frontend:latest

          ports:
            - containerPort: 4173

          resources:
            requests:
              cpu: 10m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 128Mi

  strategy:
    canary:
      steps:
        - setWeight: 20

        - pause:
            duration: 30s

        - setWeight: 50

        - pause:
            duration: 30s

        - setWeight: 100
